--- a/views/feed.ejs
+++ b/views/feed.ejs
@@ -3,72 +3,62 @@
     <div class="w-full px-4 flex items-center justify-between">
       <img class="w-1/4" src="/images/logo.png" alt="">
       <div class="icons -mt-2 flex gap-5 items-center">
-        <i class="text-[1.4rem] ri-heart-3-line"></i>
+       <a href="/notifications/<%= user.id %>"> <i class="text-[1.4rem] ri-heart-3-line"></i> </a>
         <i class="text-[1.4rem] ri-messenger-line"></i>
       </div>
     </div>
-    <div class="story px-3 flex gap-3 overflow-auto mt-5">
-      <div class="circle flex-shrink-0">
+    <div class="story px-3 flex gap-3 overflow-auto mt-5 ">
+
+
+      <div class="flex flex-col items-center gap-4  rounded-full w-[18vw] h-[18vw]">
+        <div class="image w-[10vw] h-[10vw] rounded-full border-2 border-zinc-800 flex items-center justify-center">
+          <i class="text-5xl font-light ri-image-line"></i>
+        </div>
+        <button id="selectpic" class="text-blue-500 capitalize">Add</button>
+      </div> 
+         
+    <% if(user.stories.length !== 0){ %>
+      <a href="/story/<%=user.id %>">  <div class="circle flex-shrink-0 text-center">
         <div
           class="gradient w-[18vw] h-[18vw] bg-sky-100 rounded-full bg-gradient-to-r from-purple-700 to-orange-500 flex items-center justify-center">
-          <div class="inner w-[92%] h-[92%] rounded-full overflow-hidden">
+          <div class="inner w-[90%] h-[90%] rounded-full overflow-hidden">
             <img class="w-full h-full object-cover"
-              src="https://images.unsplash.com/photo-1531746020798-e6953c6e8e04?q=80&w=2550&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+              src="/images/uploads/<%=user.picture %>"
               alt="">
           </div>
         </div>
+        <h5 class="text-sm text-white" >Your story </h5>
       </div>
-      <div class="circle flex-shrink-0">
-        <div
-          class="gradient w-[18vw] h-[18vw] bg-sky-100 rounded-full bg-gradient-to-r from-purple-700 to-orange-500 flex items-center justify-center">
-          <div class="inner w-[92%] h-[92%] rounded-full overflow-hidden">
-            <img class="w-full h-full object-cover"
-              src="https://images.unsplash.com/photo-1570158268183-d296b2892211?q=80&w=3456&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-              alt="">
-          </div>
-        </div>
-      </div>
-      <div class="circle flex-shrink-0">
-        <div
-          class="gradient w-[18vw] h-[18vw] bg-sky-100 rounded-full bg-gradient-to-r from-purple-700 to-orange-500 flex items-center justify-center">
-          <div class="inner w-[92%] h-[92%] rounded-full overflow-hidden">
-            <img class="w-full h-full object-cover"
-              src="https://images.unsplash.com/photo-1531746020798-e6953c6e8e04?q=80&w=2550&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-              alt="">
-          </div>
-        </div>
-      </div>
-      <div class="circle flex-shrink-0">
-        <div
-          class="gradient w-[18vw] h-[18vw] bg-sky-100 rounded-full bg-gradient-to-r from-purple-700 to-orange-500 flex items-center justify-center">
-          <div class="inner w-[92%] h-[92%] rounded-full overflow-hidden">
-            <img class="w-full h-full object-cover"
-              src="https://images.unsplash.com/photo-1570158268183-d296b2892211?q=80&w=3456&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-              alt="">
-          </div>
-        </div>
-      </div>
-      <div class="circle flex-shrink-0">
-        <div
-          class="gradient w-[18vw] h-[18vw] bg-sky-100 rounded-full bg-gradient-to-r from-purple-700 to-orange-500 flex items-center justify-center">
-          <div class="inner w-[92%] h-[92%] rounded-full overflow-hidden">
-            <img class="w-full h-full object-cover"
-              src="https://images.unsplash.com/photo-1531746020798-e6953c6e8e04?q=80&w=2550&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-              alt="">
-          </div>
-        </div>
-      </div>
-      <div class="circle flex-shrink-0">
-        <div
-          class="gradient w-[18vw] h-[18vw] bg-sky-100 rounded-full bg-gradient-to-r from-purple-700 to-orange-500 flex items-center justify-center">
-          <div class="inner w-[92%] h-[92%] rounded-full overflow-hidden">
-            <img class="w-full h-full object-cover"
-              src="https://images.unsplash.com/photo-1570158268183-d296b2892211?q=80&w=3456&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-              alt="">
-          </div>
-        </div>
-      </div>
+    </a>
+     <% } %>
+
+        <%allusers.forEach((oneuser)=>{ %>     
+          <%if(oneuser.stories.length !== 0){ %>
+            <%if(oneuser.username !== user.username){ %>
+              <a href="/story/<%=oneuser.id %>">  <div class="circle flex-shrink-0 text-center">
+                <div
+                  class="gradient w-[18vw] h-[18vw] bg-sky-100 rounded-full bg-gradient-to-r from-purple-700 to-orange-500 flex items-center justify-center">
+                  <div class="inner w-[90%] h-[90%] rounded-full overflow-hidden">
+                    <img class="w-full h-full object-cover"
+                      src="/images/uploads/<%=oneuser.picture %>"
+                      alt="">
+                  </div>
+                </div>
+                <h5 class="text-sm text-white" ><%= oneuser.username %></h5>
+              </div>
+            </a>
+            <% } %>
+        <% } %>
+        <% }) %>
+     
+      
     </div>
+
+    <form id="storyform" action="/uploadstory" class="w-full py-10 mt-40 hidden bg-white " enctype="multipart/form-data" method="post">
+      <input hidden type="file" name="story">
+      <input class="submit w-full px-2 py-2 bg-blue-500 rounded-md" type="submit" value="Post">
+  </form>
+
     <div class="posts parent mb-20">
       <% posts.reverse().forEach(function(post){ %>
         <div class="post mt-10 w-full min-h-[50vh]">
@@ -79,7 +69,7 @@
             <h4 class="text-sm">
               <%= post.user.username %>
             </h4>
-            <h6 class="text-xs opacity-30"> </h6>
+      
           </div>
           <div class="relative w-full h-96 mt-4 bg-sky-100 overflow-hidden">
             <img data-postid="<%= post._id %>" class="postimg w-full h-full object-cover " src="/images/uploads/<%= post.picture %>" alt="">
@@ -116,41 +106,49 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.6.7/axios.min.js" integrity="sha512-NQfB/bDaB8kaSXF8E77JjhHG5PM6XVRxvHzkZiwl3ddWCEPBa23T76MuWSwAJdMGJnmQqM0VeY9kFszsrBEFrQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js" integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script>
-    // function formatRelativeTime(date) {
-    //   const now = new Date();
-    //   const diff = now - date;
-
-    //   // Convert milliseconds to seconds
-    //   const seconds = Math.floor(diff / 1000);
-
-    //   if (seconds < 60) {
-    //     return `${seconds}s`;
-    //   }
-
-    //   const minutes = Math.floor(seconds / 60);
-
-    //   if (minutes < 60) {
-    //     return `${minutes}m`;
-    //   }
-
-    //   const hours = Math.floor(minutes / 60);
-
-    //   if (hours < 24) {
-    //     return `${hours}h`;
-    //   }
-
-    //   const days = Math.floor(hours / 24);
-
-    //   if (days < 7) {
-    //     return `${days}d`;
-    //   }
-
-    //   const weeks = Math.floor(days / 7);
-
-    //   return `${weeks}w`;
-    // }
-
     
+    function timeSinceUpload(uploadDate) {
+    const millisecondsPerMinute = 60 * 1000;
+    const millisecondsPerHour = millisecondsPerMinute * 60;
+    const millisecondsPerDay = millisecondsPerHour * 24;
+    const millisecondsPerMonth = millisecondsPerDay * 30; // Assuming a month has 30 days
+
+    const currentTime = new Date();
+    const uploadTime = new Date(uploadDate);
+
+    const elapsedTime = currentTime - uploadTime;
+
+    if (elapsedTime < millisecondsPerMinute) {
+        return Math.floor(elapsedTime / 1000) + " seconds ago";
+    } else if (elapsedTime < millisecondsPerHour) {
+        return Math.floor(elapsedTime / millisecondsPerMinute) + " minutes ago";
+    } else if (elapsedTime < millisecondsPerDay) {
+        return Math.floor(elapsedTime / millisecondsPerHour) + " hours ago";
+    } else if (elapsedTime < millisecondsPerMonth) {
+        return Math.floor(elapsedTime / millisecondsPerDay) + " days ago";
+    } else {
+        const months = Math.floor(elapsedTime / millisecondsPerMonth);
+        return months + (months === 1 ? " month ago" : " months ago");
+    }
+}
+   console.log(timeSinceUpload("2024-02-26T12:00:00"))
+
+    document.querySelector("#selectpic")
+    .addEventListener("click", function(){
+      document.querySelector("#storyform").style.display='initial';
+        document.querySelector("#storyform input").click();
+    });
+    document.querySelector("#storyform .submit").addEventListener('click',function(){
+      document.querySelector("#storyform").style.display='hidden';
+    })
+
+  
+
+ 
+
+
+
+
   
     document.querySelector(".parent")
     .addEventListener("click", function(dets){
