--- a/views/search.ejs
+++ b/views/search.ejs
@@ -23,7 +23,7 @@
                     <a href="/searcheduser/${user.username}" class="outline-none">
                         <div class="text-white flex items-center gap-2 mt-5">
                             <div class="image w-[11vw] h-[11vw] rounded-full bg-sky-100 ">
-                                <img class="w-full h-full object-cover" src="/images/uploads/${user.picture}" alt=""></img>
+                                <img class="w-full h-full object-cover" src="${user.picture}" alt=""></img>
                             </div>
                             <div class="text">
                                 <h3>${user.username}</h3>
