--- a/views/feed.ejs
+++ b/views/feed.ejs
@@ -4,17 +4,17 @@
       <img class="w-1/4" src="/images/logo.png" alt="">
       <div class="icons -mt-2 flex gap-5 items-center">
        <a href="/notifications/<%= user.id %>"> <i class="text-[1.4rem] ri-heart-3-line"></i> </a>
-        <i class="text-[1.4rem] ri-messenger-line"></i>
-      </div>
+       <a href="/messageList"> <i class="text-[1.4rem] ri-messenger-line"></i> </a>      </div>
     </div>
     <div class="story px-3 flex gap-3 overflow-auto mt-5 ">
 
 
-      <div class="flex flex-col items-center gap-4  rounded-full w-[18vw] h-[18vw]">
-        <div class="image w-[10vw] h-[10vw] rounded-full border-2 border-zinc-800 flex items-center justify-center">
-          <i class="text-5xl font-light ri-image-line"></i>
+      <div class="flex flex-col items-center gap-4  rounded-full w-[18vw] h-[18vw]  border-2 border-zinc-700">
+        <div class="image w-[10vw] h-[10vw]  rounded-full  flex items-center justify-center mt-[17px] ">
+          <i class="add text-7xl font-light  ri-add-line rounded-full bg-zinc-900 text-zinc-600"></i>
+          
         </div>
-        <button id="selectpic" class="text-blue-500 capitalize">Add</button>
+        <button id="selectpic" class="text-blue-500 capitalize opacity-0">Add</button>
       </div> 
          
     <% if(user.stories.length !== 0){ %>
@@ -23,7 +23,7 @@
           class="gradient w-[18vw] h-[18vw] bg-sky-100 rounded-full bg-gradient-to-r from-purple-700 to-orange-500 flex items-center justify-center">
           <div class="inner w-[90%] h-[90%] rounded-full overflow-hidden">
             <img class="w-full h-full object-cover"
-              src="/images/uploads/<%=user.picture %>"
+              src="<%=user.picture %>"
               alt="">
           </div>
         </div>
@@ -40,7 +40,7 @@
                   class="gradient w-[18vw] h-[18vw] bg-sky-100 rounded-full bg-gradient-to-r from-purple-700 to-orange-500 flex items-center justify-center">
                   <div class="inner w-[90%] h-[90%] rounded-full overflow-hidden">
                     <img class="w-full h-full object-cover"
-                      src="/images/uploads/<%=oneuser.picture %>"
+                      src="<%=oneuser.picture %>"
                       alt="">
                   </div>
                 </div>
@@ -66,15 +66,18 @@
         <div class="post mt-10 w-full min-h-[50vh]">
           <div class="title px-4 flex items-center gap-2">
             <div class="w-[9vw] h-[9vw] bg-sky-100 rounded-full overflow-hidden">
-              <img src="/images/uploads/<%= post.user.picture %>" alt="">
+              <img src="<%= post.user.picture %>" alt="">
             </div>
             <h4 class="text-sm">
               <%= post.user.username %>
             </h4>
+            <h6 class="text-xs opacity-30">
+              <%= dater(new Date(post.date)) %>
+            </h6>
       
           </div>
           <div class="relative w-full h-96 mt-4 bg-sky-100 overflow-hidden">
-            <img data-postid="<%= post._id %>" class="postimg w-full h-full object-cover " src="/images/uploads/<%= post.picture %>" alt="">
+            <img data-postid="<%= post._id %>" class="postimg w-full h-full object-cover" src="<%= post.picture %>" alt="">
           </div>
           <div class="options w-full px-4 flex justify-between items-center text-[1.4rem]">
             <div class="flex gap-3 mt-2">
@@ -109,7 +112,9 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js" integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script>
     
-   
+   document.querySelector('.add').addEventListener("click",()=>{
+    document.querySelector('#selectpic').click()
+   })
 
     document.querySelector("#selectpic")
     .addEventListener("click", function(){
