--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -5,7 +5,7 @@
         <a href="/upload"><i class="text-[1.4rem] ri-add-box-line"></i></a>
         <a href="/profile">
           <div class="w-8 h-8 bg-zinc-300 rounded-full overflow-hidden">
-            <img src="/images/uploads/<%= user.picture %>" alt="">
+            <img src="<%= user.picture %>" alt="">
           </div>
         </a>
       </div>
@@ -13,4 +13,4 @@
 
 
 </body>
-</html>
+</html> 
