--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -9,7 +9,7 @@
       </div>
       <div class="flex justify-between items-center pl-6 pr-[12vw] mt-8">
         <div class="w-[19vw] h-[19vw] bg-sky-100 rounded-full overflow-hidden">
-          <img class="w-full h-full object-cover" src="/images/uploads/<%= user.picture %>" alt="">
+          <img class="w-full h-full object-cover" src="<%= user.picture %>" alt="">
         </div>
         <div class="stats flex gap-5 items-center justify-between">
           <div class="flex flex-col items-center justify-center">
@@ -37,7 +37,7 @@
         <% if(user.posts.length>0){ %>
           <% user.posts.reverse().forEach(function(post){ %>
             <div class="post w-[32.5%] h-32 bg-sky-100">
-              <img class="w-full h-full object-cover" src="/images/uploads/<%= post.picture %>" alt="">
+              <img class="w-full h-full object-cover" src="<%= post.picture %>" alt="">
             </div>
           <% }) %>
         <% } else { %>
